<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Global Strings -->
    <string name="app_name">PANGU</string>
    <string name="submit_btn">Submit</string>

    <!-- Edit View Dialog Strings -->
    <string name="x_coordinate">x-coordinate</string>
    <string name="y_coordinate">y-coordinate</string>
    <string name="z_coordinate">z-coordinate</string>
    <string name="yaw">Yaw Angle</string>
    <string name="pitch">Pitch Angle</string>
    <string name="roll">Roll Angle</string>

    <!-- PANGU Controls -->
    <string name="left_control">Left</string>
    <string name="right_control">Right</string>
    <string name="up_control">Up</string>
    <string name="down_control">Down</string>
    <string name="edit_view_control">Edit View</string>
    <string name="zoom_in">Zoom In</string>
    <string name="zoo_out">Zoom Out</string>

    <!-- Action Bar Icon Names -->
    <string name="action_add">Add Configuration</string>
    <string name="action_info">Model Information</string>
    <string name="action_reload">Reload Model</string>
    <string name="action_editView">Edit View</string>

    <!-- Close App Dialog -->
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="dialog_title">Quit</string>
    <string name="dialog_message">Really Quit</string>

    <!-- Fonts -->
    <string name="condensed">sans-serif-condensed</string>
    <string name="light">sans-serif-light</string>

    <!-- Main Activity Help -->
    <string name="mainActivityHelp_title">Welcome to PANGU Mobile Client</string>
    <string name="mainActivityHelp_desc">Get Started by adding a configuration using the plus icon in the top hand corner.</string>
    <string name="mainActivityHelp_continue">(tap to continue)</string>

</resources>
